# fastapi-demo

./: .dockerignore  .gitignore  LICENSE  README.md  docker-compose.yml  dockerfile  pyproject.toml
app/: main.py
app/routers/: __init__.py  foo.py
